--- a/anurag-portfolio/src/main/resources/static/project.html
+++ b/anurag-portfolio/src/main/resources/static/project.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Project Details</title>
+  <title>Anurag Singh - Project Details</title>
+  <link rel="icon" type="image/png" th:href="@{/Anurag/images/profile3.png}" href="/Anurag/images/profile3.png">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <style>
